src/emparser/antlr/MizarParser.cpp

// Generated from c:\dev\mimosa-project\emparser\src\emparser\antlr\Mizar.g4 by ANTLR 4.7.1


#include "MizarListener.h"

#include "MizarParser.h"


using namespace antlrcpp;
using namespace antlr4;

MizarParser::MizarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MizarParser::~MizarParser() {
  delete _interpreter;
}

std::string MizarParser::getGrammarFileName() const {
  return "Mizar.g4";
}

const std::vector<std::string>& MizarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MizarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ArticleContext ------------------------------------------------------------------

MizarParser::ArticleContext::ArticleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MizarParser::EnvironmentDeclarationContext* MizarParser::ArticleContext::environmentDeclaration() {
  return getRuleContext<MizarParser::EnvironmentDeclarationContext>(0);
}

MizarParser::TextProperContext* MizarParser::ArticleContext::textProper() {
  return getRuleContext<MizarParser::TextProperContext>(0);
}


size_t MizarParser::ArticleContext::getRuleIndex() const {
  return MizarParser::RuleArticle;
}

void MizarParser::ArticleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArticle(this);
}

void MizarParser::ArticleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArticle(this);
}

MizarParser::ArticleContext* MizarParser::article() {
  ArticleContext *_localctx = _tracker.createInstance<ArticleContext>(_ctx, getState());
  enterRule(_localctx, 0, MizarParser::RuleArticle);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(332);
    environmentDeclaration();
    setState(333);
    textProper();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnvironmentDeclarationContext ------------------------------------------------------------------

MizarParser::EnvironmentDeclarationContext::EnvironmentDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MizarParser::DirectiveContext *> MizarParser::EnvironmentDeclarationContext::directive() {
  return getRuleContexts<MizarParser::DirectiveContext>();
}

MizarParser::DirectiveContext* MizarParser::EnvironmentDeclarationContext::directive(size_t i) {
  return getRuleContext<MizarParser::DirectiveContext>(i);
}


size_t MizarParser::EnvironmentDeclarationContext::getRuleIndex() const {
  return MizarParser::RuleEnvironmentDeclaration;
}

void MizarParser::EnvironmentDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnvironmentDeclaration(this);
}

void MizarParser::EnvironmentDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnvironmentDeclaration(this);
}

MizarParser::EnvironmentDeclarationContext* MizarParser::environmentDeclaration() {
  EnvironmentDeclarationContext *_localctx = _tracker.createInstance<EnvironmentDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, MizarParser::RuleEnvironmentDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(335);
    match(MizarParser::T__0);
    setState(339);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MizarParser::T__1)
      | (1ULL << MizarParser::T__4)
      | (1ULL << MizarParser::T__5)
      | (1ULL << MizarParser::T__6)
      | (1ULL << MizarParser::T__7)
      | (1ULL << MizarParser::T__8)
      | (1ULL << MizarParser::T__9)
      | (1ULL << MizarParser::T__10)
      | (1ULL << MizarParser::T__11)
      | (1ULL << MizarParser::T__12))) != 0)) {
      setState(336);
      directive();
      setState(341);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

MizarParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MizarParser::VocabularyDirectiveContext* MizarParser::DirectiveContext::vocabularyDirective() {
  return getRuleContext<MizarParser::VocabularyDirectiveContext>(0);
}

MizarParser::LibraryDirectiveContext* MizarParser::DirectiveContext::libraryDirective() {
  return getRuleContext<MizarParser::LibraryDirectiveContext>(0);
}

MizarParser::RequirementDirectiveContext* MizarParser::DirectiveContext::requirementDirective() {
  return getRuleContext<MizarParser::RequirementDirectiveContext>(0);
}


size_t MizarParser::DirectiveContext::getRuleIndex() const {
  return MizarParser::RuleDirective;
}

void MizarParser::DirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirective(this);
}

void MizarParser::DirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirective(this);
}

MizarParser::DirectiveContext* MizarParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, MizarParser::RuleDirective);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(345);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MizarParser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(342);
        vocabularyDirective();
        break;
      }

      case MizarParser::T__4:
      case MizarParser::T__5:
      case MizarParser::T__6:
      case MizarParser::T__7:
      case MizarParser::T__8:
      case MizarParser::T__9:
      case MizarParser::T__10:
      case MizarParser::T__11: {
        enterOuterAlt(_localctx, 2);
        setState(343);
        libraryDirective();
        break;
      }

      case MizarParser::T__12: {
        enterOuterAlt(_localctx, 3);
        setState(344);
        requirementDirective();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VocabularyDirectiveContext ------------------------------------------------------------------

MizarParser::VocabularyDirectiveContext::VocabularyDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MizarParser::VocabularyNameContext *> MizarParser::VocabularyDirectiveContext::vocabularyName() {
  return getRuleContexts<MizarParser::VocabularyNameContext>();
}

MizarParser::VocabularyNameContext* MizarParser::VocabularyDirectiveContext::vocabularyName(size_t i) {
  return getRuleContext<MizarParser::VocabularyNameContext>(i);
}


size_t MizarParser::VocabularyDirectiveContext::getRuleIndex() const {
  return MizarParser::RuleVocabularyDirective;
}

void MizarParser::VocabularyDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVocabularyDirective(this);
}

void MizarParser::VocabularyDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVocabularyDirective(this);
}

MizarParser::VocabularyDirectiveContext* MizarParser::vocabularyDirective() {
  VocabularyDirectiveContext *_localctx = _tracker.createInstance<VocabularyDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 6, MizarParser::RuleVocabularyDirective);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(347);
    match(MizarParser::T__1);
    setState(348);
    vocabularyName();
    setState(353);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MizarParser::T__2) {
      setState(349);
      match(MizarParser::T__2);
      setState(350);
      vocabularyName();
      setState(355);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(356);
    match(MizarParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VocabularyNameContext ------------------------------------------------------------------

MizarParser::VocabularyNameContext::VocabularyNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MizarParser::VocabularyNameContext::FILE_NAME() {
  return getToken(MizarParser::FILE_NAME, 0);
}


size_t MizarParser::VocabularyNameContext::getRuleIndex() const {
  return MizarParser::RuleVocabularyName;
}

void MizarParser::VocabularyNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVocabularyName(this);
}

void MizarParser::VocabularyNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVocabularyName(this);
}

MizarParser::VocabularyNameContext* MizarParser::vocabularyName() {
  VocabularyNameContext *_localctx = _tracker.createInstance<VocabularyNameContext>(_ctx, getState());
  enterRule(_localctx, 8, MizarParser::RuleVocabularyName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(358);
    match(MizarParser::FILE_NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LibraryDirectiveContext ------------------------------------------------------------------

MizarParser::LibraryDirectiveContext::LibraryDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MizarParser::ArticleNameContext *> MizarParser::LibraryDirectiveContext::articleName() {
  return getRuleContexts<MizarParser::ArticleNameContext>();
}

MizarParser::ArticleNameContext* MizarParser::LibraryDirectiveContext::articleName(size_t i) {
  return getRuleContext<MizarParser::ArticleNameContext>(i);
}


size_t MizarParser::LibraryDirectiveContext::getRuleIndex() const {
  return MizarParser::RuleLibraryDirective;
}

void MizarParser::LibraryDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLibraryDirective(this);
}

void MizarParser::LibraryDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLibraryDirective(this);
}

MizarParser::LibraryDirectiveContext* MizarParser::libraryDirective() {
  LibraryDirectiveContext *_localctx = _tracker.createInstance<LibraryDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 10, MizarParser::RuleLibraryDirective);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(360);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MizarParser::T__4)
      | (1ULL << MizarParser::T__5)
      | (1ULL << MizarParser::T__6)
      | (1ULL << MizarParser::T__7)
      | (1ULL << MizarParser::T__8)
      | (1ULL << MizarParser::T__9)
      | (1ULL << MizarParser::T__10)
      | (1ULL << MizarParser::T__11))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(361);
    articleName();
    setState(366);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MizarParser::T__2) {
      setState(362);
      match(MizarParser::T__2);
      setState(363);
      articleName();
      setState(368);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(369);
    match(MizarParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArticleNameContext ------------------------------------------------------------------

MizarParser::ArticleNameContext::ArticleNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MizarParser::ArticleNameContext::FILE_NAME() {
  return getToken(MizarParser::FILE_NAME, 0);
}


size_t MizarParser::ArticleNameContext::getRuleIndex() const {
  return MizarParser::RuleArticleName;
}

void MizarParser::ArticleNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArticleName(this);
}

void MizarParser::ArticleNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArticleName(this);
}

MizarParser::ArticleNameContext* MizarParser::articleName() {
  ArticleNameContext *_localctx = _tracker.createInstance<ArticleNameContext>(_ctx, getState());
  enterRule(_localctx, 12, MizarParser::RuleArticleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(371);
    match(MizarParser::FILE_NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RequirementDirectiveContext ------------------------------------------------------------------

MizarParser::RequirementDirectiveContext::RequirementDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MizarParser::RequirementContext *> MizarParser::RequirementDirectiveContext::requirement() {
  return getRuleContexts<MizarParser::RequirementContext>();
}

MizarParser::RequirementContext* MizarParser::RequirementDirectiveContext::requirement(size_t i) {
  return getRuleContext<MizarParser::RequirementContext>(i);
}


size_t MizarParser::RequirementDirectiveContext::getRuleIndex() const {
  return MizarParser::RuleRequirementDirective;
}

void MizarParser::RequirementDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRequirementDirective(this);
}

void MizarParser::RequirementDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MizarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRequirementDirective(this);
}

MizarParser::RequirementDirectiveContext* MizarParser::requirementDirective() {
  RequirementDirectiveContext *_localctx = _tracker.createInstance<RequirementDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 14, MizarParser::RuleRequirementDirective);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(373);
    match(MizarParser::T__12);
    setState(374);
    requirement();
    setState(379);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MizarParser::T__2) {
      setState(375);
      match(MizarParser::T__2);
      setState(376);
      requirement();
      setState(381);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(382);
    match(MizarParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RequirementContext ------------------------------------------------------------------

